================= Unreleased ==================
; Fixed ; Minor ; Runtime ; #5608
Removed the -g flag when building FMUs

; Fixed ; Minor ; Compiler ; #5606
Improved ability to obtain annotation value and 
remove modifications.

; Fixed ; Minor ; Compiler ; #5594
Added functionality to remove annotations/modifications.

; Fixed ; Minor ; Compiler ; #5604
Fixed bug where using an iterator expression to set the binding 
expression of a member of a record array member in a record declaration 
would cause a crash in certain circumstances.

; Fixed ; Minor ; PyFMI ; #5597
Fixed issue with getting time varying variables (sometimes wrong 
variables was returned)

; Fixed ; Minor ; Runtime ; #5590
Fixed solver trace when beta condition failures occur.

; Feature ; Minor ; PyFMI ; #5587
Added functionality to set enumerations with strings

; Fixed ; Minor ; Compiler ; #5579 
Improved handling of event generating relational expressions
with nested blocks.

; Feature ; Minor ; Compiler ; #5584
Added variable index comment before each variable in the FMI ModelVariables
XML.

; Fixed ; Minor ; Compiler ; #5490
Fixed bug that caused some errors to be reported on the wrong line.

; Feature ; Minor ; PyFMI ; #5089
Added option to limit the maximum size of the log file.

; Fixed ; Minor ; Compiler ; #5564
Using absoluteValue annotation to generate relativeQuantity attribute

; Fixed ; Minor ; Compiler ; #5563
Fixed bugs for start attribute generation in xml

; Fixed ; Minor ; Compiler ; #5560
Improved temporary counting leading to smaller generated c-functions

; Fixed ; Minor ; Compiler ; #5559
Fixed a problem with vectorized functions where the 
sizes of the dimensions where incorrectly handled.

; Fixed ; Minor ; Compiler ; #5557
Fixed dependency computation for dynamic derivatives, the FMU XML didn't list
the corresponding dynamic states as dependencies for the dynamic derivatives.

================= Stable-2018-02-09 ==================
; Change ; Minor ; Runtime; #5555