@@ -120,4 +120,10 @@ public class GenericAnnotationNodeTest extends testUtil {
         assertEmpty(n.subNodes().iterator());
     }
 
+    @Test
+    public void testValueAsAnnotationForAmbiguous() {
+        GenericAnnotationNode n = createGAN("top");
+        builder(n,"a,a");
+        assertTrue(n.forPath("a").valueAsAnnotation().isAmbiguous());
+    }
 }
